# scrumlatamcomunidad-indico-custom

./: AUTHORS.md  CHANGES.md  LICENSE.md  MANIFEST.in  README.md  setup.cfg
css/: 00-main.css  02-footer.css
indico_scrumlatam_comunidad/: plugin.py
scrumlatam/: plugin.py
scrumlatam/indico_template_overrides/core/emails/: base.html  base.txt
scrumlatam/static/css/: 01-fonts.css
scrumlatam/templates/: head.html
scrumlatam/templates/core/events/contributions/display/: contribution_display.html
templates/core/: footer.html
