[metadata]
name = indico-plugin-scrumlatamcomunidad
version = 0.0.1
description = This Indico Plugin provides a set of features specific to the Scrum LATAM Comunidad
long_description = file: README.md, AUTHORS.md, CHANGES.md, LICENSE.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/macagua/scrumlatamcomunidad-indico-custom
license = MIT
author = Leonardo Caballero
author_email = leonardocaballero@gmail.com
platform = linux #any
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: Plugins
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: Other Audience
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: JavaScript
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Database
    Topic :: Database :: Database Engines/Servers
    Topic :: Text Processing :: Markup :: HTML

project_urls =
    Blog = https://lcaballero.wordpress.com/tag/indico/
    Community = https://t.me/macagua
    Changelog = https://github.com/macagua/scrumlatamcomunidad-indico-custom/blob/main/CHANGES.md
    Releases = https://github.com/macagua/scrumlatamcomunidad-indico-custom/releases
    Issues = https://github.com/macagua/scrumlatamcomunidad-indico-custom/issues
    GitHub = https://github.com/macagua/scrumlatamcomunidad-indico-custom

[options]
packages = find:
package_dir =
    =indico_scrumlatam_comunidad
zip_safe = false
include_package_data = true
python_requires = >=3.9.0, <3.11
install_requires =
    indico>=3.2

[options.packages.find]
where = indico_scrumlatam_comunidad
include = indico_scrumlatam_comunidad*
exclude = docs*

[options.entry_points]
indico.plugins =
    scrumlatam_comunidad = indico_scrumlatam_comunidad.plugin:ScrumLATAMPlugin

[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
